--- a/HomeWork_2/WorkChat/src/main/res/drawable/bg_emoji_unselected.xml
+++ b/HomeWork_2/WorkChat/src/main/res/drawable/bg_emoji_unselected.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/dark_gray"/>
+    <solid android:color="@color/black_2"/>
     <corners android:radius="10dp" />
 </shape>
