--- a/HomeWork_2/WorkChat/src/main/res/values/themes.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/themes.xml
@@ -5,9 +5,13 @@
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/green</item>
         <item name="colorSecondaryVariant">@color/green</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/black_1</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:navigationBarColor">@color/background</item>
         <item name="android:windowBackground">@color/background</item>
+    </style>
+
+    <style name="Theme.WorkChat.Dialogs" parent="Theme.WorkChat">
+        <item name="android:navigationBarColor">@color/message_background</item>
     </style>
 </resources>
