--- a/HomeWork_2/WorkChat/src/main/res/layout/input_layout.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/input_layout.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/message_background"
+    android:paddingStart="10dp"
     android:paddingTop="10dp"
+    android:paddingEnd="4dp"
     android:paddingBottom="10dp">
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/messageInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:background="@drawable/bg_message_fields"
         android:hint="@string/write_message"
         android:inputType="text"
@@ -34,7 +35,7 @@
         android:clickable="true"
         android:focusable="true"
         android:scaleType="center"
-        android:src="@drawable/ic_attach_file"
+        android:src="@drawable/ic_attachment"
         app:layout_constraintBottom_toBottomOf="@+id/messageInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/messageInput" />
