--- a/HomeWork_2/WorkChat/src/main/res/layout/activity_home.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/activity_home.xml
@@ -11,15 +11,16 @@
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:avatar="@mipmap/ic_launcher_round"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/dialogActivityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dev_start_dialogs_activity"
         android:layout_marginBottom="40dp"
+        android:text="@string/dev_start_dialogs_activity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
