--- a/HomeWork_2/WorkChat/src/main/res/layout/input_layout.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/input_layout.xml
@@ -29,11 +29,13 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/actionButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:scaleType="center"
         android:src="@drawable/ic_attachment"
         app:layout_constraintBottom_toBottomOf="@+id/messageInput"
