--- a/HomeWork_2/WorkChat/src/main/res/layout/item_message.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_message.xml
@@ -12,6 +12,7 @@
         android:maxHeight="37dp" />
 
     <com.theost.workchat.ui.views.MessageLayout
+        android:id="@+id/messageLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
