--- a/HomeWork_2/WorkChat/src/main/res/layout/message_layout.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/message_layout.xml
@@ -8,9 +8,9 @@
         android:id="@+id/messageName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/deleted_name"
+        android:layout_marginBottom="3dp"
         android:textColor="@color/green"
-        android:textSize="14sp" />
+        android:textSize="16sp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/messageTime"
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textColor="@color/gray"
-        android:textSize="14sp"
+        android:textSize="16sp"
         tools:text="23:30" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -27,6 +27,6 @@
         android:layout_height="wrap_content"
         android:text="@string/deleted_message"
         android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:textSize="16sp" />
 
 </merge>
