--- a/HomeWork_2/WorkChat/src/main/res/values/colors.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/colors.xml
@@ -17,4 +17,7 @@
     <color name="background">@color/black_1</color>
     <color name="message_background">@color/black_3</color>
     <color name="input_background">@color/black_4</color>
+
+    <color name="message_income_bubble">@color/black_2</color>
+    <color name="message_outcome_bubble">@color/green</color>
 </resources>
