--- a/HomeWork_2/WorkChat/src/main/res/layout/activity_dialog.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/activity_dialog.xml
@@ -17,7 +17,9 @@
             android:id="@+id/messagesList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp" />
 
     </ScrollView>
 
