--- a/HomeWork_2/WorkChat/src/main/res/values/attrs.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/attrs.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="MessageView">
+    <attr name="username" format="string" />
+    <attr name="message" format="string" />
+    <attr name="time" format="string" />
+    <attr name="bubble" format="color" />
+    <attr name="corners" format="dimension" />
+
+    <declare-styleable name="IncomeMessageView">
         <attr name="avatar" format="string" />
+        <attr name="username" />
+        <attr name="message" />
+        <attr name="time" />
+        <attr name="bubble" />
+        <attr name="corners" />
     </declare-styleable>
 
-    <declare-styleable name="MessageLayout">
-        <attr name="bubbleColor" format="string" />
-        <attr name="cornerRadius" format="dimension" />
+    <declare-styleable name="OutcomeMessageView">
+        <attr name="username" />
+        <attr name="message" />
+        <attr name="time" />
+        <attr name="bubble" />
+        <attr name="corners" />
     </declare-styleable>
 
     <declare-styleable name="DateView">
@@ -19,6 +33,12 @@
         <attr name="datePaddingsHorizontal" format="integer" />
     </declare-styleable>
 
+    <declare-styleable name="ReactionLayout">
+        <attr name="reactionHorizontalMargin" format="dimension" />
+        <attr name="reactionVerticalMargin" format="dimension" />
+        <attr name="percentWidth" format="float" />
+    </declare-styleable>
+
     <declare-styleable name="ReactionView">
         <attr name="emoji" format="string" />
         <attr name="text" format="string" />
@@ -26,11 +46,5 @@
         <attr name="reactionTextSize" format="dimension" />
         <attr name="reactionPadding" format="dimension" />
         <attr name="reactionBackground" format="dimension" />
-    </declare-styleable>
-
-    <declare-styleable name="ReactionLayout">
-        <attr name="reactionHorizontalMargin" format="dimension" />
-        <attr name="reactionVerticalMargin" format="dimension" />
-        <attr name="percentWidth" format="float" />
     </declare-styleable>
 </resources>
