--- a/HomeWork_2/WorkChat/src/main/res/layout/item_message_outcome.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_message_outcome.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content">
 
     <com.theost.workchat.ui.views.OutcomeMessageLayout
+        android:id="@+id/messageLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="12dp"
@@ -17,11 +18,10 @@
         android:id="@+id/reactionLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
+        android:paddingBottom="10dp"
         app:reactionHorizontalMargin="10dp"
-        app:reactionVerticalMargin="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/message">
+        app:reactionVerticalMargin="10dp">
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/addReaction"
@@ -29,11 +29,9 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bg_reaction_view"
             android:contentDescription="@string/add_emoji"
-            android:minWidth="56dp"
+            android:minWidth="55dp"
             android:minHeight="37dp"
-            android:src="@drawable/ic_add"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/message" />
+            android:src="@drawable/ic_add" />
 
     </com.theost.workchat.ui.views.ReactionLayout>
 
