--- a/HomeWork_2/WorkChat/src/main/res/layout/item_message_outcome.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_message_outcome.xml
@@ -19,20 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:paddingBottom="10dp"
         app:reactionHorizontalMargin="10dp"
-        app:reactionVerticalMargin="10dp">
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/addReaction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_reaction_view"
-            android:contentDescription="@string/add_emoji"
-            android:minWidth="55dp"
-            android:minHeight="37dp"
-            android:src="@drawable/ic_add" />
-
-    </com.theost.workchat.ui.views.ReactionLayout>
+        app:reactionVerticalMargin="10dp" />
 
 </merge>
