--- a/HomeWork_2/WorkChat/src/main/res/drawable/bg_message_fields.xml
+++ b/HomeWork_2/WorkChat/src/main/res/drawable/bg_message_fields.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/input_background"/>
+    <solid android:color="@color/black_4"/>
     <corners android:radius="100dp" />
 </shape>
