--- a/HomeWork_2/WorkChat/src/main/res/layout/input_layout.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/input_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/message_background"
+    android:background="@color/background_light"
     android:paddingStart="10dp"
     android:paddingTop="10dp"
     android:paddingEnd="4dp"
