Исправлено отображение аватара

--- a/HomeWork_2/WorkChat/src/main/res/layout/item_message_income.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_message_income.xml
@@ -4,12 +4,19 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxWidth="40dp"
-        android:maxHeight="40dp" />
+        app:cardCornerRadius="100dp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:maxWidth="40dp"
+            android:maxHeight="40dp" />
+
+    </androidx.cardview.widget.CardView>
 
     <com.theost.workchat.ui.views.IncomeMessageLayout
         android:id="@+id/messageLayout"
