--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_profile.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_profile.xml
@@ -21,7 +21,7 @@
             android:adjustViewBounds="true"
             android:contentDescription="@string/profile"
             android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/sample_avatar" />
 
     </androidx.cardview.widget.CardView>
 
