--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_dialog.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_dialog.xml
@@ -4,6 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include android:id="@+id/toolbarLayout"
+        layout="@layout/toolbar" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messagesList"
         android:layout_width="match_parent"
@@ -15,7 +18,7 @@
         app:layout_constraintBottom_toTopOf="@+id/inputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />
 
     <include
         android:id="@+id/inputLayout"
