--- a/HomeWork_2/WorkChat/src/main/res/values/themes.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/themes.xml
@@ -12,28 +12,6 @@
         <item name="android:windowBackground">@color/background_dark</item>
         <item name="toolbarStyle">@style/Theme.WorkChat.Toolbar</item>
         <item name="android:textColor">@color/white</item>
-    </style>
-
-    <style name="Theme.WorkChat.BottomSheet" parent="Theme.Design.Light.BottomSheetDialog">
-        <item name="bottomSheetStyle">@style/Theme.WorkChat.BottomSheet.Modal</item>
-        <item name="android:windowIsFloating">false</item>
-        <item name="android:navigationBarColor">@color/background_light</item>
-    </style>
-
-    <style name="Theme.WorkChat.BottomSheet.Modal" parent="Widget.Design.BottomSheet.Modal">
-        <item name="android:background">@drawable/bg_reaction_dialog</item>
-    </style>
-
-    <style name="Theme.WorkChat.Toolbar" parent="Widget.MaterialComponents.Toolbar">
-        <item name="android:background">@color/background_light</item>
-        <item name="titleTextColor">@color/white</item>
-    </style>
-
-    <style name="Theme.WorkChat.RoundButton" parent="Widget.MaterialComponents.Button">
-        <item name="backgroundTint">@color/black_2</item>
-        <item name="cornerRadius">100dp</item>
-        <item name="textAllCaps">false</item>
-        <item name="fontFamily">sans-serif</item>
-        <item name="android:letterSpacing">0</item>
+        <item name="autoCompleteTextViewStyle">@style/Theme.WorkChat.AutoCompleteTextView</item>
     </style>
 </resources>
