--- a/HomeWork_2/WorkChat/src/main/res/values/styles.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/styles.xml
@@ -36,4 +36,8 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/gray</item>
     </style>
+
+    <style name="Theme.WorkChat.TabLayout.TextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
