--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_dialog.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_dialog.xml
@@ -4,8 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include android:id="@+id/toolbarLayout"
+    <include
+        android:id="@+id/toolbarLayout"
         layout="@layout/toolbar" />
+
+    <include
+        android:id="@+id/emptyLayout"
+        layout="@layout/empty_view" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messagesList"
