--- a/HomeWork_2/WorkChat/src/main/res/layout/item_people.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_people.xml
@@ -32,7 +32,7 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_gravity="bottom|end"
-        android:background="@drawable/status_circle"
+        android:background="@drawable/ic_status"
         android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/avatarLayout" />
