--- a/HomeWork_2/WorkChat/src/main/res/values/arrays.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/arrays.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="topic_backgrounds">
-        <item>#2A9D8F</item>
-        <item>#E9C46A</item>
-        <item>#ED6A5E</item>
-        <item>#3976A7</item>
-    </string-array>
+    <integer-array name="topic_backgrounds">
+        <item>@color/green</item>
+        <item>@color/yellow</item>
+        <item>@color/orange</item>
+        <item>@color/pink</item>
+        <item>@color/purple</item>
+    </integer-array>
 </resources>
