--- a/HomeWork_2/WorkChat/src/main/res/layout/input_layout.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/input_layout.xml
@@ -43,4 +43,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/messageInput" />
 
+    <ProgressBar
+        android:id="@+id/loadingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:padding="1dp"
+        app:layout_constraintEnd_toEndOf="@+id/actionButton"
+        app:layout_constraintStart_toStartOf="@+id/actionButton"
+        app:layout_constraintTop_toTopOf="@+id/actionButton"
+        app:layout_constraintBottom_toBottomOf="@+id/actionButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
