Добавлен скелетон, ui во время загрузки данных

--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_channels.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_channels.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <include
+        android:id="@+id/shimmerLayout"
+        layout="@layout/shimmer_fragment_channels" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/channelsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_channel"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:listitem="@layout/item_channel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
