--- a/HomeWork_2/WorkChat/src/main/res/layout-land/fragment_profile.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout-land/fragment_profile.xml
@@ -8,12 +8,21 @@
         android:id="@+id/toolbarLayout"
         layout="@layout/toolbar" />
 
+    <include
+        android:id="@+id/shimmerLayout"
+        layout="@layout/shimmer_fragment_profile"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/avatarLayout"
         android:layout_width="185dp"
         android:layout_height="185dp"
         android:layout_marginEnd="30dp"
         android:backgroundTint="@android:color/transparent"
+        android:visibility="gone"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
         app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
@@ -25,8 +34,7 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:contentDescription="@string/profile"
-            android:scaleType="fitXY"
-            android:src="@mipmap/sample_avatar" />
+            android:scaleType="fitXY" />
 
     </androidx.cardview.widget.CardView>
 
@@ -35,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="32sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@id/guidelineCenter"
         app:layout_constraintTop_toTopOf="@id/avatarLayout" />
 
@@ -44,6 +53,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/light_gray"
         android:textSize="20sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@id/guidelineCenter"
         app:layout_constraintTop_toBottomOf="@+id/userName" />
 
@@ -55,6 +65,7 @@
         android:text="@string/online"
         android:textColor="@color/green"
         android:textSize="16sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@id/guidelineCenter"
         app:layout_constraintTop_toBottomOf="@+id/userAbout" />
 
@@ -65,7 +76,7 @@
         android:layout_height="60dp"
         android:text="@string/log_out"
         android:textSize="16sp"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/avatarLayout"
         app:layout_constraintStart_toStartOf="@id/guidelineCenter" />
 
