--- a/HomeWork_2/WorkChat/src/main/res/layout/empty_view.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/empty_view.xml
@@ -9,6 +9,7 @@
     android:paddingTop="8dp"
     android:paddingEnd="16dp"
     android:paddingBottom="8dp"
+    android:visibility="gone"
     app:layout_constraintBottom_toTopOf="@id/inputLayout"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
