--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_dialog.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_dialog.xml
@@ -12,6 +12,15 @@
         android:id="@+id/emptyLayout"
         layout="@layout/empty_view" />
 
+    <ProgressBar
+        android:id="@+id/loadingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/inputLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messagesList"
         android:layout_width="match_parent"
