--- a/HomeWork_2/WorkChat/src/main/res/values/arrays.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/arrays.xml
@@ -3,7 +3,7 @@
     <integer-array name="topic_backgrounds">
         <item>@color/green</item>
         <item>@color/yellow</item>
-        <item>@color/orange</item>
+        <item>@color/red</item>
         <item>@color/pink</item>
         <item>@color/purple</item>
     </integer-array>
