--- a/HomeWork_2/WorkChat/src/main/res/layout/empty_view.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/empty_view.xml
@@ -4,7 +4,7 @@
     android:id="@+id/emptyView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_reaction_view"
+    android:background="@drawable/bg_empty_view"
     android:paddingStart="16dp"
     android:paddingTop="8dp"
     android:paddingEnd="16dp"
