--- a/HomeWork_2/WorkChat/src/main/res/layout/item_message_income.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_message_income.xml
@@ -10,11 +10,9 @@
         app:cardCornerRadius="100dp">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:maxWidth="40dp"
-            android:maxHeight="40dp" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:adjustViewBounds="true" />
 
     </androidx.cardview.widget.CardView>
 
