--- a/HomeWork_2/WorkChat/src/main/res/layout/reactions_bottom_sheet.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/reactions_bottom_sheet.xml
@@ -46,6 +46,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/retryButton"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
