--- a/HomeWork_2/WorkChat/src/main/res/layout-land/fragment_profile.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout-land/fragment_profile.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/userStatus"
+        android:id="@+id/userStatusOnline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
@@ -69,16 +69,17 @@
         app:layout_constraintStart_toStartOf="@id/guidelineCenter"
         app:layout_constraintTop_toBottomOf="@+id/userAbout" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/userLogout"
-        style="@style/Theme.WorkChat.RoundButton"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:text="@string/log_out"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/userStatusIdle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:text="@string/idle"
+        android:textColor="@color/orange"
         android:textSize="16sp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/avatarLayout"
-        app:layout_constraintStart_toStartOf="@id/guidelineCenter" />
+        app:layout_constraintStart_toStartOf="@id/guidelineCenter"
+        app:layout_constraintTop_toBottomOf="@+id/userAbout" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineCenter"
