--- a/HomeWork_2/WorkChat/src/main/res/layout-land/shimmer_fragment_profile.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout-land/shimmer_fragment_profile.xml
@@ -14,7 +14,7 @@
             android:layout_width="185dp"
             android:layout_height="185dp"
             android:layout_marginEnd="30dp"
-            android:backgroundTint="@color/background_light"
+            android:backgroundTint="@color/gray"
             app:cardCornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
             app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
