--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_profile.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_profile.xml
@@ -61,12 +61,25 @@
         app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/userStatus"
+        android:id="@+id/userStatusOnline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:text="@string/online"
         android:textColor="@color/green"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userAbout" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/userStatusIdle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:text="@string/idle"
+        android:textColor="@color/orange"
         android:textSize="16sp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
