--- a/HomeWork_2/WorkChat/src/main/res/layout/shimmer_item_people.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/shimmer_item_people.xml
@@ -13,7 +13,7 @@
         android:id="@+id/avatarLayout"
         android:layout_width="46dp"
         android:layout_height="46dp"
-        android:backgroundTint="@color/background_light"
+        android:backgroundTint="@color/gray"
         app:cardCornerRadius="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_next"
-        android:tint="@color/background_light"
+        android:tint="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
