--- a/HomeWork_2/WorkChat/src/main/res/layout/item_people.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_people.xml
@@ -22,8 +22,7 @@
             android:id="@+id/userAvatar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@mipmap/sample_avatar" />
+            android:scaleType="fitXY" />
 
     </androidx.cardview.widget.CardView>
 
