--- a/HomeWork_2/WorkChat/src/main/res/layout/item_reaction.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_reaction.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/emoji"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:layout_gravity="center"
         android:gravity="center"
         android:padding="10dp"
         android:textSize="40sp"
