--- a/HomeWork_2/WorkChat/src/main/res/layout/shimmer_fragment_people.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/shimmer_fragment_people.xml
@@ -2,7 +2,8 @@
 <com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/shimmer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:visibility="gone">
 
     <LinearLayout
         android:layout_width="match_parent"
