--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_people.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_people.xml
@@ -18,6 +18,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />
 
+    <include
+        android:id="@+id/emptyLayout"
+        layout="@layout/empty_view"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbarLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/usersList"
         android:layout_width="match_parent"
